--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
+########## IntelliJ ##########
+.idea/
+*.iws
+/out/
+.idea_modules/
+atlassian-ide-plugin.xml
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+fabric.properties
+
+########## LATEX ##########
+
 ## Core latex/pdflatex auxiliary files:
 *.aux
 *.lof
