Get no-july-tweets followers as well

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 nltk==3.2.1
 numpy==1.11.3
+oauthlib==2.0.1
 pandas==0.19.2
 pkg-resources==0.0.0
 python-dateutil==2.6.0
 pytz==2016.10
+requests==2.12.5
+requests-oauthlib==0.7.0
 six==1.10.0
 tqdm==4.8.4
+tweepy==3.5.0
