--- a/social-media/twitter-influencers/requirements.txt
+++ b/social-media/twitter-influencers/requirements.txt
@@ -1,12 +1,28 @@
+appdirs==1.4.0
+boto==2.45.0
+bz2file==0.98
+funcy==1.7.2
+future==0.16.0
+gensim==0.13.4.1
+Jinja2==2.9.5
+joblib==0.10.3
+MarkupSafe==0.23
 nltk==3.2.1
+numexpr==2.6.2
 numpy==1.11.3
 oauthlib==2.0.1
+packaging==16.8
 pandas==0.19.2
-pkg-resources==0.0.0
+py==1.4.32
+pyLDAvis==2.1.0
+pyparsing==2.1.10
+pytest==3.0.6
 python-dateutil==2.6.0
 pytz==2016.10
 requests==2.12.5
 requests-oauthlib==0.7.0
+scipy==0.18.1
 six==1.10.0
+smart-open==1.3.5
 tqdm==4.8.4
 tweepy==3.5.0
