[comp-morph] Task 3 part 1 code finished

--- a/comp-morph/cfg/cfg-src/grammar_cnf.cfg
+++ b/comp-morph/cfg/cfg-src/grammar_cnf.cfg
@@ -1,65 +1,79 @@
 JJ -> 'much'
+NP|<NN-NN> -> NN NN
+NP -> ADJP NP|<JJ-NN>
+NP -> NNP NP|<NNP-NNP>
 NNP -> 'Cook'
 ROOT -> SQ
 PRP -> 'it'
 ROOT -> S
 VBP -> 'have'
+NP|<NNP-NNP> -> NNP NNP
 NN -> 'system'
 S -> VP
-NP -> ADJP JJ NN
 ADJP -> JJ
 NP -> PRP
 PUNC -> '?'
 VB -> 'have'
 NN -> 'side'
 NN -> 'adult'
-SQ -> VBZ NP ADJP PUNC
 CD -> '35'
 JJ -> 'appendicitis'
 JJ -> 'important'
+SQ -> VBZ SQ|<NP-ADJP-PUNC>
 VP -> MD VP
+VP -> VBP VP|<PP-S>
+NP -> DT NP|<NN-NN>
+VP -> VB VP|<NP-PP>
 DT -> 'the'
+SQ|<NP-VP-PUNC> -> NP SQ|<VP-PUNC>
 NN -> 'heredity'
 NP -> DT NN
 VP -> VBZ NP
 NNP -> 'Dr'
-NP -> DT JJ NN NN
 IN -> 'than'
 NN -> 'abdomen'
+S|<S-PUNC> -> S PUNC
 VP -> VB
 DT -> 'an'
 JJ -> 'skeletal'
 VBP -> 'grow'
+S|<ADVP-VP-PUNC> -> ADVP S|<VP-PUNC>
 RB -> 'finally'
 ADJP -> CD NN
 EX -> 'There'
 NP -> JJ NNS
 DT -> 'An'
+QP|<IN-DT> -> IN DT
 IN -> 'Before'
 VBZ -> 'controls'
-NP -> JJ NN NNS
+S -> PP S|<NP-VP-PUNC>
 RB -> 'normally'
-VP -> VBN PRT PP
 VBP -> 'consider'
 NP -> NNS
 VP -> VBG ADVP
-NP -> DT NN CC NN NNS
-NP -> DT JJ NN
+NP|<CC-NN-NNS> -> CC NP|<NN-NNS>
 IN -> 'by'
 JJ -> 'many'
-VP -> VBP PP S
-NNS -> 'locations'
 NP -> NP ADJP
+NNS -> 'locations'
+S|<NP-VP-PUNC> -> NP S|<VP-PUNC>
 NP -> QP NN
-S -> S CC S PUNC
+S|<VP-PUNC> -> VP PUNC
+S|<CC-S-PUNC> -> CC S|<S-PUNC>
+SQ|<VP-PUNC> -> VP PUNC
+NP -> DT NP|<ADJP-NN>
 RB -> 'very'
 NN -> 'response'
+NP|<JJ-NN> -> JJ NN
 NN -> 'one'
+VP -> VBN VP|<PRT-PP>
 IN -> 'that'
 NN -> 'male'
 VP -> VBN PP
 DT -> 'a'
+S -> NP S|<VP-PUNC>
 ADJP -> JJ S
+NP -> DT NP|<JJ-NN-NN>
 ADVP -> RB
 TO -> 'to'
 JJ -> 'willing'
@@ -69,77 +83,83 @@ NN -> '%'
 DT -> 'Some'
 VBP -> 'Do'
 NP -> NP RRC
+VP|<PP-S> -> PP S
 VBZ -> 'accelerates'
+SQ -> VBP SQ|<NP-VP-PUNC>
 NN -> 'origin'
 RP -> 'up'
+NP -> DT NP|<NN-CC-NN-NNS>
 PRT -> RP
-VBP -> 'are'
 DT -> 'The'
 VBN -> 'made'
+VBP -> 'are'
 VP -> VBP PP
 JJ -> 'tired'
 NN -> 'Work'
 CC -> 'and'
 NN -> 'movement'
 VBG -> 'functioning'
-NP -> DT ADJP NN
 NN -> 'growth'
 NN -> 'discovery'
 VP -> VBP NP
 NN -> 'risk'
-S -> NP ADVP VP PUNC
 IN -> 'in'
 NNP -> 'David'
 NNS -> 'muscles'
+NP|<JJ-NN-NN> -> JJ NP|<NN-NN>
 NNS -> 'Scientists'
-NP -> NNP NNP NNP
+VP|<NP-PP> -> NP PP
 NNS -> 'people'
 NN -> 'disease'
-NN -> 'milestone'
+SQ|<ADJP-PUNC> -> ADJP PUNC
 IN -> 'at'
 VP -> VBD SBAR
+NN -> 'milestone'
 VP -> VBP ADJP
 NN -> 'motor'
 NN -> 'mystery'
+S -> NP S|<ADVP-VP-PUNC>
 DT -> 'A'
 JJR -> 'more'
 JJ -> 'responsible'
+NP|<ADJP-NN> -> ADJP NN
 NP -> NP PP
 NN -> 'action'
-S -> PP NP VP PUNC
 NN -> 'female'
+S -> S S|<CC-S-PUNC>
 NP -> NN
 NP -> NNP
 ADJP -> JJ PP
 NNS -> 'movements'
+SQ|<NP-ADJP-PUNC> -> NP SQ|<ADJP-PUNC>
 NN -> 'week'
 NP -> EX
 NN -> 'muscle'
 JJ -> 'physical'
 PRP -> 'you'
+NP|<NN-PUNC> -> NN PUNC
 VP -> VB ADJP
 JJ -> 'lasting'
 NN -> 'research'
 NP -> DT NNS
 RB -> 'Not'
 MD -> 'could'
-NP -> RB DT NN PUNC
 PP -> TO NP
-S -> NP VP PUNC
-NN -> 'arthritis'
 NNP -> 'DNA'
+NN -> 'arthritis'
 CD -> '45'
+QP -> JJR QP|<IN-DT>
 VP -> VBZ ADJP
-VP -> VB NP PP
 NN -> 'insertion'
+NP -> DT NP|<JJ-NN>
 ROOT -> NP
 VBD -> 'realized'
 VB -> 'dispute'
 VBZ -> 'is'
-QP -> JJR IN DT
 NN -> 'face'
 IN -> 'of'
 VP -> TO VP
+VP -> VBP VP|<NP-NP>
 PUNC -> '.'
 JJ -> 'average'
 JJ -> 'privy'
@@ -149,23 +169,27 @@ PP -> IN NP
 ADJP -> RB JJ
 IN -> 'on'
 NP -> JJ NN
+NP|<DT-NN-PUNC> -> DT NP|<NN-PUNC>
 VBZ -> 'Is'
 JJ -> 'voluntary'
+VP|<NP-NP> -> NP NP
 RRC -> ADJP NP
 NN -> 'researcher'
 VB -> 'be'
 VP -> VB NP
-VP -> VBP NP NP
 IN -> 'for'
 VB -> 'work'
 NNS -> 'Muscles'
 JJ -> 'Old'
-SQ -> VBP NP VP PUNC
 VBN -> 'determined'
+NP -> JJ NP|<NN-NNS>
+NP|<NN-NNS> -> NN NNS
+VP|<PRT-PP> -> PRT PP
 VP -> VBD NP
 SBAR -> IN S
-NP -> DT NN NN
+NP|<NN-CC-NN-NNS> -> NN NP|<CC-NN-NNS>
 VP -> VBZ VP
 S -> NP VP
 NN -> 'pain'
 JJ -> 'Few'
+NP -> RB NP|<DT-NN-PUNC>
