[comp-morph] Task 3 part 1 fix unary

--- a/comp-morph/cfg/cfg-src/grammar_cnf.cfg
+++ b/comp-morph/cfg/cfg-src/grammar_cnf.cfg
@@ -1,195 +1,197 @@
-JJ -> 'much'
-NP|<NN-NN> -> NN NN
-NP -> ADJP NP|<JJ-NN>
-NP -> NNP NP|<NNP-NNP>
-NNP -> 'Cook'
-ROOT -> SQ
-PRP -> 'it'
-ROOT -> S
-VBP -> 'have'
-NP|<NNP-NNP> -> NNP NNP
-NN -> 'system'
-S -> VP
-ADJP -> JJ
-NP -> PRP
-PUNC -> '?'
-VB -> 'have'
-NN -> 'side'
-NN -> 'adult'
-CD -> '35'
-JJ -> 'appendicitis'
-JJ -> 'important'
-SQ -> VBZ SQ|<NP-ADJP-PUNC>
-VP -> MD VP
-VP -> VBP VP|<PP-S>
-NP -> DT NP|<NN-NN>
-VP -> VB VP|<NP-PP>
-DT -> 'the'
-SQ|<NP-VP-PUNC> -> NP SQ|<VP-PUNC>
-NN -> 'heredity'
-NP -> DT NN
-VP -> VBZ NP
-NNP -> 'Dr'
-IN -> 'than'
-NN -> 'abdomen'
-S|<S-PUNC> -> S PUNC
-VP -> VB
-DT -> 'an'
-JJ -> 'skeletal'
-VBP -> 'grow'
-S|<ADVP-VP-PUNC> -> ADVP S|<VP-PUNC>
-RB -> 'finally'
-ADJP -> CD NN
-EX -> 'There'
-NP -> JJ NNS
-DT -> 'An'
-QP|<IN-DT> -> IN DT
-IN -> 'Before'
-VBZ -> 'controls'
-S -> PP S|<NP-VP-PUNC>
-RB -> 'normally'
-VBP -> 'consider'
-NP -> NNS
-VP -> VBG ADVP
-NP|<CC-NN-NNS> -> CC NP|<NN-NNS>
-IN -> 'by'
-JJ -> 'many'
-NP -> NP ADJP
-NNS -> 'locations'
-S|<NP-VP-PUNC> -> NP S|<VP-PUNC>
-NP -> QP NN
-S|<VP-PUNC> -> VP PUNC
-S|<CC-S-PUNC> -> CC S|<S-PUNC>
-SQ|<VP-PUNC> -> VP PUNC
-NP -> DT NP|<ADJP-NN>
-RB -> 'very'
-NN -> 'response'
-NP|<JJ-NN> -> JJ NN
-NN -> 'one'
-VP -> VBN VP|<PRT-PP>
-IN -> 'that'
-NN -> 'male'
-VP -> VBN PP
-DT -> 'a'
-S -> NP S|<VP-PUNC>
-ADJP -> JJ S
-NP -> DT NP|<JJ-NN-NN>
-ADVP -> RB
-TO -> 'to'
-JJ -> 'willing'
-JJ -> 'pyramidal'
-VBD -> 'was'
-NN -> '%'
-DT -> 'Some'
-VBP -> 'Do'
-NP -> NP RRC
-VP|<PP-S> -> PP S
-VBZ -> 'accelerates'
-SQ -> VBP SQ|<NP-VP-PUNC>
-NN -> 'origin'
-RP -> 'up'
-NP -> DT NP|<NN-CC-NN-NNS>
-PRT -> RP
-DT -> 'The'
-VBN -> 'made'
-VBP -> 'are'
-VP -> VBP PP
-JJ -> 'tired'
-NN -> 'Work'
-CC -> 'and'
-NN -> 'movement'
-VBG -> 'functioning'
-NN -> 'growth'
-NN -> 'discovery'
-VP -> VBP NP
-NN -> 'risk'
-IN -> 'in'
-NNP -> 'David'
-NNS -> 'muscles'
-NP|<JJ-NN-NN> -> JJ NP|<NN-NN>
-NNS -> 'Scientists'
-VP|<NP-PP> -> NP PP
-NNS -> 'people'
-NN -> 'disease'
-SQ|<ADJP-PUNC> -> ADJP PUNC
-IN -> 'at'
-VP -> VBD SBAR
-NN -> 'milestone'
-VP -> VBP ADJP
-NN -> 'motor'
-NN -> 'mystery'
-S -> NP S|<ADVP-VP-PUNC>
-DT -> 'A'
-JJR -> 'more'
-JJ -> 'responsible'
-NP|<ADJP-NN> -> ADJP NN
-NP -> NP PP
-NN -> 'action'
-NN -> 'female'
-S -> S S|<CC-S-PUNC>
-NP -> NN
-NP -> NNP
-ADJP -> JJ PP
-NNS -> 'movements'
-SQ|<NP-ADJP-PUNC> -> NP SQ|<ADJP-PUNC>
-NN -> 'week'
-NP -> EX
-NN -> 'muscle'
-JJ -> 'physical'
-PRP -> 'you'
-NP|<NN-PUNC> -> NN PUNC
-VP -> VB ADJP
-JJ -> 'lasting'
-NN -> 'research'
-NP -> DT NNS
-RB -> 'Not'
-MD -> 'could'
-PP -> TO NP
-NNP -> 'DNA'
-NN -> 'arthritis'
-CD -> '45'
-QP -> JJR QP|<IN-DT>
-VP -> VBZ ADJP
-NN -> 'insertion'
-NP -> DT NP|<JJ-NN>
-ROOT -> NP
 VBD -> 'realized'
-VB -> 'dispute'
-VBZ -> 'is'
-NN -> 'face'
-IN -> 'of'
-VP -> TO VP
-VP -> VBP VP|<NP-NP>
-PUNC -> '.'
-JJ -> 'average'
-JJ -> 'privy'
-DT -> 'that'
-JJ -> 'scary'
-PP -> IN NP
-ADJP -> RB JJ
-IN -> 'on'
-NP -> JJ NN
-NP|<DT-NN-PUNC> -> DT NP|<NN-PUNC>
-VBZ -> 'Is'
-JJ -> 'voluntary'
-VP|<NP-NP> -> NP NP
-RRC -> ADJP NP
-NN -> 'researcher'
-VB -> 'be'
-VP -> VB NP
-IN -> 'for'
-VB -> 'work'
-NNS -> 'Muscles'
-JJ -> 'Old'
-VBN -> 'determined'
-NP -> JJ NP|<NN-NNS>
 NP|<NN-NNS> -> NN NNS
-VP|<PRT-PP> -> PRT PP
-VP -> VBD NP
-SBAR -> IN S
-NP|<NN-CC-NN-NNS> -> NN NP|<CC-NN-NNS>
-VP -> VBZ VP
-S -> NP VP
-NN -> 'pain'
+NP+PRP -> 'you'
+SQ -> VBP SQ|<NP-VP-PUNC>
+S -> NP+NNP VP
+VB -> 'be'
+NN -> 'one'
+NP+NNP -> 'DNA'
+VBP -> 'have'
+VBZ -> 'controls'
+S|<VP-PUNC> -> VP PUNC
+NP -> NP PP
+NNS -> 'people'
+VBN -> 'determined'
+NP+NN -> 'pain'
+S+VP -> TO VP
+CD -> '45'
+ADVP+RB -> 'normally'
+VBZ -> 'is'
+NNP -> 'David'
+VP -> VB NP+PRP
+VP+VB -> 'work'
+SQ -> VBZ SQ|<NP-ADJP-PUNC>
+NP+NN -> 'Work'
+VP -> VBP PP
+NN -> 'action'
+VBN -> 'made'
+NP -> NP+NN PP
+ADJP+JJ -> 'tired'
+NP -> DT NN
+S -> S S|<CC-S-PUNC>
+QP|<IN-DT> -> IN DT
+VP -> VBP VP|<NP-NP>
+NN -> 'mystery'
+DT -> 'Some'
+DT -> 'that'
+NN -> 'system'
+NP -> DT NP|<ADJP-NN>
+SQ|<NP-ADJP-PUNC> -> NP SQ|<ADJP-PUNC>
+VP -> MD VP
+NN -> '%'
+NNP -> 'Cook'
+NN -> 'movement'
+NP+NN -> 'arthritis'
+S|<CC-S-PUNC> -> CC S|<S-PUNC>
+ADVP+RB -> 'finally'
+VBZ -> 'Is'
+NP -> NNP NP|<NNP-NNP>
+NP -> JJ NN
+DT -> 'an'
+ADJP -> JJ S+VP
+NP+NNS -> 'Muscles'
+NNS -> 'movements'
+VP|<NP-NP> -> NP+NN NP
+NN -> 'adult'
+S|<ADVP-VP-PUNC> -> ADVP+RB S|<VP-PUNC>
+S -> NP+NNS S|<VP-PUNC>
+NP|<JJ-NN-NN> -> JJ NP|<NN-NN>
+S -> NP+NNS S|<ADVP-VP-PUNC>
+NN -> 'muscle'
+JJ -> 'voluntary'
+S -> NP+EX S|<VP-PUNC>
+VP -> VB ADJP+JJ
+NP -> JJ NP|<NN-NNS>
+NP+NN -> 'heredity'
+VP -> VBP ADJP
+NN -> 'milestone'
+ADJP+JJ -> 'appendicitis'
+PP -> IN NP+NNP
+NP|<JJ-NN> -> JJ NN
+VP -> VBZ NP+NN
+VBP -> 'Do'
+JJ -> 'scary'
+NNS -> 'muscles'
+NN -> 'side'
+NN -> 'week'
+NP -> NP ADJP
+QP -> JJR QP|<IN-DT>
+S -> NP S|<VP-PUNC>
 JJ -> 'Few'
+NP+PRP -> 'it'
+VP -> VBD SBAR
+S -> NP VP
+VP -> VBN VP|<PRT-PP>
+DT -> 'An'
+VP -> VBZ ADJP
+NP|<NNP-NNP> -> NNP NNP
+IN -> 'Before'
+JJ -> 'important'
+JJ -> 'privy'
+VP -> VBP VP|<PP-S>
+DT -> 'a'
+DT -> 'the'
+VBD -> 'was'
+NN -> 'motor'
+NP|<DT-NN-PUNC> -> DT NP|<NN-PUNC>
+VB -> 'dispute'
+NP -> QP NN
 NP -> RB NP|<DT-NN-PUNC>
+NP -> DT NP|<JJ-NN-NN>
+DT -> 'The'
+PUNC -> '?'
+NN -> 'researcher'
+NP+NN -> 'response'
+NP|<CC-NN-NNS> -> CC NP|<NN-NNS>
+NP -> NP RRC
+SQ|<VP-PUNC> -> VP PUNC
+NN -> 'abdomen'
+S -> PP S|<NP-VP-PUNC>
+PP -> IN NP+NN
+NP -> DT NP|<NN-NN>
+NP|<ADJP-NN> -> ADJP NN
+SQ|<NP-VP-PUNC> -> NP+PRP SQ|<VP-PUNC>
+IN -> 'for'
+TO -> 'to'
+VP -> VBZ VP
+PP -> TO NP
+RB -> 'very'
+VBP -> 'grow'
+JJR -> 'more'
+NP -> ADJP NP|<JJ-NN>
+PUNC -> '.'
+IN -> 'than'
+NP -> DT NNS
+IN -> 'that'
+IN -> 'in'
+ROOT -> SQ
+S -> NP+NN S|<VP-PUNC>
+JJ -> 'average'
+S+VP -> TO VP+VB
+ROOT -> NP
+NP|<NN-NN> -> NN NN
+NP+NNS -> 'Scientists'
+ADJP -> CD NN
+NN -> 'pain'
+ROOT -> S
+JJ -> 'physical'
+VBZ -> 'accelerates'
+ADJP -> RB JJ
+VP|<PP-S> -> PP S+VP
+PP -> IN NP
+NN -> 'female'
+VP -> VBZ NP
+JJ -> 'skeletal'
+ADJP -> JJ PP
+ADJP+JJ -> 'lasting'
+IN -> 'at'
+NN -> 'face'
+NP -> JJ NNS
+JJ -> 'willing'
+JJ -> 'Old'
+NNS -> 'locations'
+NP+NNS -> 'muscles'
+CD -> '35'
+NP+NN -> 'risk'
+JJ -> 'responsible'
+RRC -> ADJP+JJ NP
+NP -> DT NP|<NN-CC-NN-NNS>
+VP -> VBN PP
+JJ -> 'many'
+IN -> 'of'
+VP -> VB VP|<NP-PP>
+NN -> 'male'
+PP -> IN NP+NNS
+NN -> 'growth'
+S|<S-PUNC> -> S PUNC
+VP|<NP-PP> -> NP PP
+VP -> VBP NP
+NP|<NN-PUNC> -> NN PUNC
+VP|<PRT-PP> -> PRT+RP PP
+VBP -> 'are'
+NNP -> 'Dr'
+NN -> 'discovery'
+NN -> 'origin'
+VP -> VBD NP
+NN -> 'insertion'
+NN -> 'research'
+RB -> 'Not'
+CC -> 'and'
+VP -> VBG ADVP+RB
+S|<NP-VP-PUNC> -> NP+NN S|<VP-PUNC>
+NN -> 'disease'
+VB -> 'have'
+SBAR -> IN S
+MD -> 'could'
+NP+EX -> 'There'
+NP -> DT NP|<JJ-NN>
+PRT+RP -> 'up'
+JJ -> 'much'
+IN -> 'by'
+VBG -> 'functioning'
+NP|<NN-CC-NN-NNS> -> NN NP|<CC-NN-NNS>
+SQ|<ADJP-PUNC> -> ADJP+JJ PUNC
+VBP -> 'consider'
+IN -> 'on'
+DT -> 'A'
+JJ -> 'pyramidal'
